[project]
name = "openenv-insurance-env"
version = "0.1.0"
description = "AI Insurance Claim Validation & Fraud Detection Environment"
authors = [{name = "Sharvesh"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "openai",
    "pyyaml",
    "requests"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
