[project]
name = "openenv-insurance-env"
version = "0.1.0"
description = "AI Insurance Claim Validation & Fraud Detection Environment"
authors = [{name = "Sharvesh"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "openai",
    "pyyaml",
    "requests",
    "openenv-core>=0.2.0"
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"

